--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -39,6 +39,7 @@ footer{
     }
 }
 .pages__menu, .utility__menu{
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px 0;
