--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -22,20 +22,23 @@ footer{
         font-weight: 500;
         line-height: 151%;
     }
-    .footer-contact__wrapper{
+}
+
+.footer-contact__wrapper{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    list-style: none;
+    gap: 0 50px;
+    padding: 30px 0;
+    strong{
         display: flex;
         flex-direction: column;
-        list-style: none;
-        gap: 30px 0;
-        strong{
-            display: flex;
-            flex-direction: column;
-            color: #FFF;
-            font-family: var(--krub);
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 135.023%;
-        }
+        color: #FFF;
+        font-family: var(--krub);
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 135.023%;
     }
 }
 .pages__menu, .utility__menu{
