--- a/client/src/components/preview/Preview.scss
+++ b/client/src/components/preview/Preview.scss
@@ -1,3 +1,22 @@
+.preview__status{
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  z-index: 3;
+  font-size: 40px;
+  height: 100%;
+  width: 100%;
+}
+
+.preview__status.expired{
+  color: red;
+  backdrop-filter: blur(2px);
+}
+
 .certificate-container{
     width: 100%;
     height: 100%;
