--- a/client/src/components/certificates-table/CertificatesTable.scss
+++ b/client/src/components/certificates-table/CertificatesTable.scss
@@ -1,4 +1,4 @@
-.certificates{
+.certificates {
     width: 100%;
     height: 100%;
     background-color: #fff;
@@ -9,7 +9,7 @@
     position: relative;
 }
 
-.certificates__filters{
+.certificates__filters {
     height: 70px;
     margin-bottom: 10px;
     position: sticky;
@@ -23,14 +23,14 @@
     background-color: #fff;
     padding-bottom: 10px;
     padding-top: 0px;
-    .certificates__filters-search{
+    .certificates__filters-search {
         display: flex;
         flex-direction: column;
         flex: 1;
-        label{
+        label {
             font-weight: 600;
         }
-        input{
+        input {
             min-height: 40px;
             flex: 1;
             outline: none;
@@ -42,73 +42,76 @@
             font-size: 18px;
         }
     }
-    
-    .certificates__filters-form{
+
+    .certificates__filters-form {
         display: flex;
         flex: 1;
         align-items: flex-end;
-        button{
+        button {
             height: 40px;
         }
     }
 }
 
-.certificates__table{
+.certificates__table {
     width: 100%;
     border-collapse: collapse;
     font-size: 16px;
 }
 
-.table__header-row{
-    th{
+.table__header-row {
+    th {
         text-align: left;
         padding: 7px;
         border-bottom: 1px solid #b7b7b7;
-        &:nth-child(4),&:nth-child(5), &:nth-child(6) {
+        &:nth-child(4),
+        &:nth-child(5),
+        &:nth-child(6) {
             text-align: center;
         }
     }
 }
 
-.certificates__table-row{
+.certificates__table-row {
     border-bottom: 1px solid #b7b7b7;
-    td{
+    td {
         padding: 4px;
-        button{
+        button {
             padding: 7px 10px;
             font-size: 9px;
             display: block;
             margin: 0 auto;
         }
-        &:nth-child(4),&:nth-child(5), &:nth-child(6) {
+        &:nth-child(4),
+        &:nth-child(5),
+        &:nth-child(6) {
             text-align: center;
         }
     }
-    &:last-child{
+    &:last-child {
         border: none;
     }
-    
 }
 
-.certificates__filters-pagination{
+.certificates__filters-pagination {
     display: flex;
     gap: 0 10px;
     margin-left: 30px;
-    .certificates__filters-pagination-number{
+    .certificates__filters-pagination-number {
         width: 60px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
-    .certificates__filters-pagination-limit{
+    .certificates__filters-pagination-limit {
         border: 1px solid var(--main-bg-color);
         outline: none;
         padding: 0 10px;
         border-radius: 5px;
         margin-right: 20px;
     }
-    button{
+    button {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -123,7 +126,7 @@
     }
 }
 
-.loading-table-overlay{
+.loading-table-overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -134,26 +137,34 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    .loader{
+    .loader {
         height: 20px;
         width: 20px;
         margin: 7px 40px;
-        box-shadow: -34px 0 #FFF, 34px 0 #FFF;
+        box-shadow:
+            -34px 0 #fff,
+            34px 0 #fff;
         animation: shadowPulseLarge 2s linear infinite;
     }
 
     @keyframes shadowPulseLarge {
         33% {
-          background: #FFF;
-          box-shadow: -34px 0 var(--main-bg-color), 34px 0 #FFF;
+            background: #fff;
+            box-shadow:
+                -34px 0 var(--main-bg-color),
+                34px 0 #fff;
         }
         66% {
-          background: var(--main-bg-color);
-          box-shadow: -34px 0 #FFF, 34px 0 #FFF;
+            background: var(--main-bg-color);
+            box-shadow:
+                -34px 0 #fff,
+                34px 0 #fff;
         }
         100% {
-          background: #FFF;
-          box-shadow: -34px 0 #FFF, 34px 0 var(--main-bg-color);
+            background: #fff;
+            box-shadow:
+                -34px 0 #fff,
+                34px 0 var(--main-bg-color);
         }
-      }
+    }
 }
