--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -1,69 +1,70 @@
 // FOOTER
-footer{
+footer {
     background-color: #091242;
 }
-.footer-image{
+.footer-image {
     width: 100%;
 }
-.footer-secondar__wrapper{
+.footer-secondar__wrapper {
     display: flex;
     margin-top: 40px;
-    justify-content: space-between; 
+    justify-content: space-between;
     margin-bottom: 40px;
 }
-.info__wrapper{
+.info__wrapper {
     display: flex;
     flex-direction: column;
     gap: 30px 0;
-    p{
+    p {
         max-width: 319px;
-        color: #E8E8E8;
+        color: #e8e8e8;
         font-family: var(--krub);
         font-weight: 500;
         line-height: 151%;
     }
 }
 
-.footer-contact__wrapper{
+.footer-contact__wrapper {
     display: flex;
     width: 100%;
     justify-content: center;
     list-style: none;
     gap: 0 50px;
     padding: 30px 0;
-    strong{
+    strong {
         display: flex;
         flex-direction: column;
-        color: #FFF;
+        color: #fff;
         font-family: var(--krub);
         font-size: 14px;
         font-weight: 500;
         line-height: 135.023%;
     }
 }
-.pages__menu, .utility__menu{
+.pages__menu,
+.utility__menu {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px 0;
-    li{
+    li {
         list-style: none;
         font-family: var(--krub);
         font-weight: 500;
         line-height: 250%;
-        a{
+        a {
             text-decoration: none;
-            color: #FFF;
+            color: #fff;
         }
     }
 }
-.subscribe__menu{
+.subscribe__menu {
     display: flex;
     flex-direction: column;
-    input{
+    input {
         max-width: 317px;
         height: 60px;
-        border: 1px solid #4E5683;
+        border: 1px solid #4e5683;
         background: transparent;
         color: #999;
         font-family: var(--krub);
@@ -71,142 +72,143 @@ footer{
         font-weight: 400;
         text-indent: 10px;
     }
-    div{
+    div {
         margin-top: 20px;
         display: flex;
         align-items: center;
         gap: 0 35px;
-        button{
-        padding: 19px 36px;
-        border: none;
-        background: linear-gradient(94deg, #FFB629 -1.21%, #FFDA56 58.66%, #FFD7A6 116.84%);
-        color: #23212A;
-        font-family: var(--krub);
-        font-weight: 600;
-        line-height: 135.023%;
+        button {
+            padding: 19px 36px;
+            border: none;
+            background: linear-gradient(
+                94deg,
+                #ffb629 -1.21%,
+                #ffda56 58.66%,
+                #ffd7a6 116.84%
+            );
+            color: #23212a;
+            font-family: var(--krub);
+            font-weight: 600;
+            line-height: 135.023%;
+        }
+        i {
+            color: #fff;
+            font-size: 25px;
+        }
     }
-    i{
-        color: #fff;
-        font-size: 25px;
-    }
-    }
-    
 }
-.info__menu-wrapper{
+.info__menu-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 0 20px;
     padding: 14px 0;
-    h3{
-        color: #FFF;
+    h3 {
+        color: #fff;
         font-family: var(--krub);
         font-weight: 500;
         line-height: 250%;
     }
-    .info__menu{
+    .info__menu {
         display: flex;
         align-items: center;
         gap: 0 30px;
         list-style: none;
-        a{
+        a {
             text-decoration: none;
-            color: #8388A7;
+            color: #8388a7;
             font-family: var(--krub);
             font-weight: 400;
-            line-height: 250%; 
+            line-height: 250%;
         }
     }
 }
 
-.footer-menu{
+.footer-menu {
     display: flex;
     justify-content: space-between;
     gap: 40px;
     width: 25%;
 }
 
-@media only screen and (max-width: 1200px){
-    .footer__menu-wrapper{
+@media only screen and (max-width: 1200px) {
+    .footer__menu-wrapper {
         justify-content: space-between;
     }
 }
 
-@media only screen and (max-width: 980px){
-    
-    .footer-secondar__wrapper{
+@media only screen and (max-width: 980px) {
+    .footer-secondar__wrapper {
         gap: 20px;
         flex-wrap: wrap;
     }
 
-    .subscribe__menu{
+    .subscribe__menu {
         width: 100%;
-        input{
+        input {
             max-width: none;
             text-indent: 20px;
             height: 40px;
         }
-        div{
+        div {
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
     }
 
-    .info__menu-wrapper{
+    .info__menu-wrapper {
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
-        h3{
+        h3 {
             font-size: 1.2rem;
         }
-        a{
+        a {
             font-size: 14px;
         }
     }
-    
-    .footer-menu{
+
+    .footer-menu {
         width: 40%;
     }
-
 }
 
-@media only screen and (max-width: 600px){
-    .footer-menu{
+@media only screen and (max-width: 600px) {
+    .footer-menu {
         width: 100%;
         display: flex;
         justify-content: space-around;
     }
 
-    .info__wrapper{
+    .info__wrapper {
         width: 100%;
         text-align: center;
         display: flex;
         align-items: center;
         justify-content: center;
-        p{
+        p {
             max-width: 450px;
         }
-        .footer-contact__wrapper{
+        .footer-contact__wrapper {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 0 20px;
             width: 100%;
             text-align: start;
-            .form__menu-item{
+            .form__menu-item {
                 display: flex;
                 justify-content: center;
             }
         }
     }
 
-    .info__menu-wrapper{
-        h3{
+    .info__menu-wrapper {
+        h3 {
             font-size: 1rem;
         }
-        a{
+        a {
             font-size: 10px;
         }
     }
-
 }
