--- a/client/src/components/hero/Hero.scss
+++ b/client/src/components/hero/Hero.scss
@@ -1,12 +1,12 @@
 // HERO
 
-.hero{
+.hero {
     min-height: 600px;
     padding-bottom: 40px;
     position: relative;
 }
 
-.hero__image{
+.hero__image {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -16,41 +16,44 @@
     z-index: 1;
 }
 
-.hero__overlay{
+.hero__overlay {
     position: absolute;
     z-index: 2;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, rgba(236, 155, 3, 0.824) 0%, rgba(100, 14, 131, 0.081) 70%);
-    
+    background: linear-gradient(
+        90deg,
+        rgba(236, 155, 3, 0.824) 0%,
+        rgba(100, 14, 131, 0.081) 70%
+    );
 }
 
-.hero__content{
+.hero__content {
     position: relative;
     z-index: 3;
     min-height: 478px;
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: space-between;
     gap: 0 15px;
 }
 
-.hero__content-wrapper{
+.hero__content-wrapper {
     width: 100%;
     max-width: 470px;
-    h2{
+    h2 {
         color: var(--light-font-color);
         font-family: var(--rubik);
         font-size: 35px;
         font-weight: 700;
     }
-    p{
+    p {
         color: var(--light-font-color);
         margin: 20px 0;
     }
 }
 
-.hero__content-actions{
+.hero__content-actions {
     display: flex;
     align-items: center;
     gap: 0 20px;
@@ -58,14 +61,13 @@
     justify-content: space-between;
     font-size: 13px !important;
 
-    button{
+    button {
         font-size: 14px !important;
         white-space: nowrap;
     }
 }
 
-
-.hero__content-form-input{
+.hero__content-form-input {
     width: 100%;
     height: 40px;
     margin-bottom: 10px;
@@ -77,7 +79,7 @@
     transition: 0.3s;
 }
 
-.hero__content-certificate{
+.hero__content-certificate {
     background-color: #fff;
     transform: scale(1);
     min-width: 300px;
@@ -85,15 +87,19 @@
     box-shadow: 0px 0px 10px var(--main-bg-color);
 }
 
-.hero__content-certificate-link{
+.hero__content-certificate-link {
     width: 100%;
     height: 100%;
     display: block;
-    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,121,251,0.7441570378151261) 100%);
+    background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(0, 121, 251, 0.7441570378151261) 100%
+    );
     position: absolute;
     top: 0;
     left: 0;
-    span{
+    span {
         padding: 10px 20px;
         background-color: #fff;
         display: inline-block;
@@ -109,45 +115,49 @@
     }
 }
 
-@media only screen and (max-width: 768px){
-    .hero__content{
+@media only screen and (max-width: 768px) {
+    .hero__content {
         justify-content: center;
     }
-    .hero__content-wrapper{
+    .hero__content-wrapper {
         max-width: 95%;
         margin: 0 auto;
         text-align: center;
-        h2{
+        h2 {
             font-size: 30px;
         }
     }
 
-    .hero__content-actions{
+    .hero__content-actions {
         flex-direction: column;
         justify-content: center;
-        button{
+        button {
             margin-top: 20px;
             margin-bottom: 20px;
         }
     }
 
-    .hero__overlay{
-        background: linear-gradient(90deg, rgba(236, 155, 3, 0.824) 0%, rgba(100, 14, 131, 0.081) 70%);  
+    .hero__overlay {
+        background: linear-gradient(
+            90deg,
+            rgba(236, 155, 3, 0.824) 0%,
+            rgba(100, 14, 131, 0.081) 70%
+        );
     }
-    .hero__content{
+    .hero__content {
         flex-direction: column-reverse;
         padding-top: 40px;
     }
 }
 
-@media only screen and (max-width: 552px){
-    .hero__content-wrapper{
-        p{
+@media only screen and (max-width: 552px) {
+    .hero__content-wrapper {
+        p {
             font-size: 13px;
         }
     }
 
-    .hero__image{
+    .hero__image {
         object-position: 68%;
     }
 }
