--- a/client/src/components/sidebar/Sidebar.scss
+++ b/client/src/components/sidebar/Sidebar.scss
@@ -1,4 +1,4 @@
-.sidebar{
+.sidebar {
     height: 100%;
     width: 100%;
     max-width: 230px;
@@ -10,35 +10,42 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    h1{
+    h1 {
         visibility: hidden;
     }
 
-    img{
+    img {
         width: 150px;
     }
 
-    button{
+    button {
         margin-top: 10px;
         width: calc(200px - 32px);
     }
 }
 
-
-.sidebar__profile{
+.sidebar__profile {
     display: flex;
     align-items: center;
     gap: 0 10px;
     margin: 40px 0;
 }
 
-.sidebar__profile-avatar{
+.sidebar__profile-avatar {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #00416A;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #77b6f6, #0a84cf);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #77b6f6, #0a84cf); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #00416a; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+        to right,
+        #77b6f6,
+        #0a84cf
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+        to right,
+        #77b6f6,
+        #0a84cf
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
     font-size: 28px;
     display: flex;
@@ -46,36 +53,36 @@
     align-items: center;
 }
 
-.sidebar__profile-name{
+.sidebar__profile-name {
     text-align: left;
-    strong{
+    strong {
         font-size: 16px;
     }
 
-    p{
+    p {
         font-size: 14px;
         color: #cecece;
     }
 }
 
-.sidebar__menu-wrapper{
+.sidebar__menu-wrapper {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.sidebar__menu{
+.sidebar__menu {
     position: relative;
-    .sidebar__menu-list{
+    .sidebar__menu-list {
         list-style-type: none;
         text-align: left;
         display: flex;
         flex-direction: column;
-        gap:  10px 0;
+        gap: 10px 0;
     }
 
-    a{
+    a {
         display: block;
         text-decoration: none;
         padding: 10px !important;
@@ -85,7 +92,7 @@
         font-size: 14px;
     }
 
-    .sidebar__menu-item--active{
+    .sidebar__menu-item--active {
         color: #000;
         display: block;
         background-color: var(--main-accent-color);
