--- a/client/src/routes/sub-routes/create/Create.scss
+++ b/client/src/routes/sub-routes/create/Create.scss
@@ -1,9 +1,9 @@
-.create-certificate{
+.create-certificate {
     display: flex;
     flex-direction: column;
 }
 
-.create-certificate__content{
+.create-certificate__content {
     display: flex;
     background-color: var(--main-bg-color);
     flex: 1;
@@ -14,7 +14,7 @@
     gap: 0 20px;
 }
 
-.create-certificate__form{
+.create-certificate__form {
     display: flex;
     flex-direction: column;
     gap: 30px 0;
@@ -22,27 +22,28 @@
     color: #fff;
 }
 
-.create-certificate__view{
+.create-certificate__view {
     max-width: 450px;
     width: 100%;
     position: relative;
 }
 
-.create-certificate__form-fields{
+.create-certificate__form-fields {
     display: flex;
     flex-direction: column;
     gap: 10px 20px;
 }
 
-div[inputwrapperitem="true"]{
+div[inputwrapperitem='true'] {
     display: flex;
     flex: 1;
     flex-direction: column;
     gap: 15px 0;
-    label{
+    label {
         margin-top: 5px;
     }
-    input, select{
+    input,
+    select {
         text-transform: uppercase;
         flex: 1;
         min-height: 40px;
@@ -52,37 +53,37 @@ div[inputwrapperitem="true"]{
         text-indent: 10px;
         font-size: 18px;
         border: 3px solid var(--main-accent-color);
-        &:focus{
+        &:focus {
             box-shadow: none !important;
         }
     }
 
-    .react-datepicker-popper{
+    .react-datepicker-popper {
         padding-bottom: 0 !important;
     }
 
-    .react-datepicker__input-container{
-        input{
+    .react-datepicker__input-container {
+        input {
             width: 100%;
         }
     }
 
-    .react-datepicker__triangle{
+    .react-datepicker__triangle {
         display: none;
     }
 }
 
-.create-certificate__form-actions{
+.create-certificate__form-actions {
     display: flex;
     justify-content: center;
     gap: 0 20px;
     display: flex;
-    button{
+    button {
         flex: 1;
     }
 }
 
-.crete-certificate__success{
+.crete-certificate__success {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -96,6 +97,6 @@ div[inputwrapperitem="true"]{
     z-index: 10;
 }
 
-.create-certificate__view:hover .crete-certificate__success{
+.create-certificate__view:hover .crete-certificate__success {
     opacity: 0;
 }
