--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,3 +39,48 @@ button:active:not(:disabled) {
 input:focus {
     box-shadow: 0px 0px 3px 2px var(--main-accent-color);
 }
+
+.ant-menu-item-selected {
+    background-color: transparent !important;
+    color: unset !important;
+}
+
+.ant-menu-item {
+    background-color: transparent !important;
+}
+
+.ant-menu-item:has(.active) {
+    background-color: #074799 !important;
+    color: #fff !important;
+}
+
+.ant-menu a {
+    transition: color 0.0001s !important;
+}
+
+.ant-layout-sider-children {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    color: #000 !important;
+}
+.message {
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 13px;
+    &--error {
+        background-color: var(--danger-color);
+    }
+
+    &--success {
+        background-color: var(--success-color);
+    }
+
+    &--loading {
+        background-color: var(--warning-color);
+    }
+}
+
