--- a/client/src/components/documents/driver/DriverCertificate.scss
+++ b/client/src/components/documents/driver/DriverCertificate.scss
@@ -142,8 +142,6 @@
     padding-right: 10px;
 }
 .pdf_title {
-    margin-top: 100px;
-    margin-bottom: 60px;
 }
 .pdf_titleDRu {
     font-size: 16px;
@@ -249,7 +247,8 @@
     margin-top: 18px;
 }
 .pdf_langDateEn {
-    margin-top: 95px;
+    margin-top: 63px;
+    margin-bottom: 40px;
 }
 .pdf_langDirector {
     margin-top: 12px;
@@ -315,6 +314,7 @@
 
 .pdf_langSerContImg {
     width: 70px;
+    margin-left: 130px;
 }
 .pdf_langSertificate {
     padding: 30px 0;
