--- a/client/src/routes/draft/Draft.scss
+++ b/client/src/routes/draft/Draft.scss
@@ -2,9 +2,15 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    overflow: auto;
+    padding: 50px 30px;
     flex-direction: column;
     align-items: center;
     font-family: sans-serif !important;
+}
+
+.darft_container::-webkit-scrollbar {
+    display: none;
 }
 
 .pdf_userName {
