--- a/client/src/routes/search/Search.scss
+++ b/client/src/routes/search/Search.scss
@@ -7,7 +7,8 @@
 .search-certificate__content {
     display: flex;
     align-items: center;
-    max-width: 430px;
+    max-width: 800px;
+    margin: 0 auto;
     width: 100%;
     height: auto;
 }
